--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
 
 @layer base {
   body {
-    @apply font-[Raleway];
+    @apply font-[Montserrat];
   }
   li {
     @apply px-4;
@@ -24,7 +24,7 @@
 .content-div:hover {
   background-image: linear-gradient(
     to right,
-    rgba(112, 157, 255, 0.8),
+    #46bcde,
     hsla(242, 74%, 61%, 0.8)
   )!important;
 }
