--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 .content-div:hover {
   background-image: linear-gradient(
     to right,
-    #46bcde,
-    hsla(242, 74%, 61%, 0.8)
+    #08314A,
+    hsla(46, 100%, 49%, 0.8)
   )!important;
 }
