--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,10 @@
   background-position: center;
   height: 250px;
 }
+
+.content-div:hover {
+  background-image: linear-gradient(
+    to bottom right,
+    #FD00E3,#0C7DCB,#03F8FF
+  )!important;
+}
