--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,26 @@
     #FD00E3,#0C7DCB,#03F8FF
   )!important;
 }
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #FD00E3;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+  .navbar {
+    display: none;
+  }
+  .hamburger-menu {
+    display: block;
+  }
+}
